@@ -31,3 +31,6 @@ cpan = 1
 [Author::Plicease::Thanks]
 current = Graham Ollis <plicease@cpan.org>
 contributor = Roy Storey (KIWIROY)
+
+[PruneFiles]
+match = ^.tmp/
