@@ -2,6 +2,7 @@ Revision history for {{$dist->name}}
 
 {{$NEXT}}
   - This plugin now requires Alien::Build of at least 2.39.
+  - Compatability with ALIEN_DOWNLOAD_RULE overrides (gh#18)
 
 0.07      2021-05-15 14:28:23 -0600
   - Optionally use GitHub Personall Access Token when specified as
